--- a/index.html
+++ b/index.html
@@ -96,177 +96,128 @@
 
 
                         <h1 class="govuk-heading-xl">
-                            Service name goes here
+                            GDS Pattern List
                         </h1>
 
-                        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Application incomplete</h2>
-                        <p class="govuk-body govuk-!-margin-bottom-7">You have completed 3 of 8 sections.</p>
+                        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">List of useful page patterns</h2>
+                        <p class="govuk-body govuk-!-margin-bottom-7">HTML view only</p>
 
                         <ol class="govuk-summary-list">
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Check before
-                                    you start
+                                    <a href="start-page-1-multi.html" title="start-page-multipart"><span
+                                            class="govuk-prototype-kit-task-list__section-number">
+                                        </span>1. Start a service page - multipart</a>
                                 </h2>
-                                <ul class="govuk-prototype-kit-task-list__items">
-                                    <li class="govuk-prototype-kit-task-list__item">
-                                        <span class="govuk-prototype-kit-task-list__task-name">
-                                            Check eligibility
-                                        </span>
-                                        <strong class="govuk-tag govuk-prototype-kit-task-list__tag">Completed</strong>
-                                    </li>
-                                    <li class="govuk-prototype-kit-task-list__item">
-                                        <span class="govuk-prototype-kit-task-list__task-name">
-                                            Read declaration
-                                        </span>
-                                        <strong class="govuk-tag govuk-prototype-kit-task-list__tag"
-                                            id="read-declaration-status">Completed</strong>
-                                    </li>
-                                </ul>
+                                <p>If the start point is linked to a wider process
+                                    that needs more explanation, create an ‘Apply’ section within a multipart
+                                    guide</p>
                             </li>
-
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Prepare
-                                    application
+                                    <a href="templates-list-single-items-3.html" title="Calculation
+                                        summary page"><span class="govuk-prototype-kit-task-list__section-number">
+                                        </span> Calculation
+                                        summary</a>
                                 </h2>
-                                <ul class="govuk-prototype-kit-task-list__items">
-                                    <li class="govuk-prototype-kit-task-list__item">
-                                        <span class="govuk-prototype-kit-task-list__task-name">
-                                            Company information
-                                        </span>
-                                        <strong class="govuk-tag govuk-prototype-kit-task-list__tag"
-                                            id="company-information-status">Completed</strong>
-                                    </li>
-                                    <li class="govuk-prototype-kit-task-list__item">
-                                        <span class="govuk-prototype-kit-task-list__task-name">
-                                            Your contact details
-                                        </span>
-                                        <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag"
-                                            id="contact-details-status">In progress</strong>
-                                    </li>
-                                    <li class="govuk-prototype-kit-task-list__item">
-                                        <span class="govuk-prototype-kit-task-list__task-name">
-                                            <a href="templates-list-single-items-2.html"
-                                                aria-describedby="list-of-something-status">
-                                                List of something
-                                            </a>
-                                        </span>
-                                        <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag"
-                                            id="list-convictions-status">Not started</strong>
-                                    </li>
-                                    <li class="govuk-prototype-kit-task-list__item">
-                                        <span class="govuk-prototype-kit-task-list__task-name">
-                                            Provide evidence
-                                        </span>
-                                        <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag"
-                                            id="financial-evidence-status">Cannot start yet</strong>
-                                    </li>
-                                    <li class="govuk-prototype-kit-task-list__item">
-                                        <span class="govuk-prototype-kit-task-list__task-name">
-                                            Give some information
-                                        </span>
-                                        <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag"
-                                            id="medical-information-status">Cannot start yet</strong>
-                                    </li>
-                                </ul>
                             </li>
-
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <span class="govuk-prototype-kit-task-list__section-number">3. </span> Apply
-                                </h2>
-                                <ul class="govuk-prototype-kit-task-list__items">
-                                    <li class="govuk-prototype-kit-task-list__item">
-                                        <span class="govuk-prototype-kit-task-list__task-name">
-                                            Submit and pay
-                                        </span>
-                                        <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag"
-                                            id="submit-pay-status">Cannot start yet</strong>
-                                    </li>
-                                </ul>
+                                    <a href="templates-list-single-items-3.html" title="Single items"><span
+                                            class="govuk-prototype-kit-task-list__section-number">2. </span> Single
+                                        items
+                                </h2></a>
                             </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-list-subdata-items.html" title="Subdata-items"><span
+                                            class="govuk-prototype-kit-task-list__section-number">3. </span>
+                                        Subdata-items
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-list-subdata-items-view.html" title="Subdata-items-view"><span
+                                            class="govuk-prototype-kit-task-list__section-number">4. </span>
+                                        Subdata-items-view
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-remove-confirmation.html" title="Remove confirmation"><span
+                                            class="govuk-prototype-kit-task-list__section-number">5. </span> Remove
+                                        confirmation
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-validation-checkboxes.html" title="Checkboxes"><span
+                                            class="govuk-prototype-kit-task-list__section-number">6. </span> Checkboxes
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-validation-country.html" title="Validation-country"><span
+                                            class="govuk-prototype-kit-task-list__section-number">7. </span> Validation
+                                        country
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-validation-date.html" title="Validation-date"><span
+                                            class="govuk-prototype-kit-task-list__section-number">8. </span> Validation
+                                        date
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-validation-money-field.html" title="Validation-money-field"><span
+                                            class="govuk-prototype-kit-task-list__section-number">9. </span> Validation
+                                        money field</a>
+                                </h2>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-validation-number-field.html"
+                                        title="Validation-number-field"><span
+                                            class="govuk-prototype-kit-task-list__section-number">10. </span> Validation
+                                        number field
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-validation-radios.html" title="Validation-radios"><span
+                                            class="govuk-prototype-kit-task-list__section-number">11. </span> Validation
+                                        radios
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-validation-text-field.html" title="Validation-text-field"><span
+                                            class="govuk-prototype-kit-task-list__section-number">12. </span> Validation
+                                        text-field
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-validation-yes-no.html" title="Validation-yes-no"><span
+                                            class="govuk-prototype-kit-task-list__section-number">13. </span> validation
+                                        yes-no
+                                </h2></a>
+                            </li>
+                            <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="templates-dashboards.html" title="Dashboards"><span
+                                            class="govuk-prototype-kit-task-list__section-number">14. </span> Dashboards
+                                </h2></a>
+                            </li>
+
                         </ol>
                     </div>
                 </div>
-
-
-                <!-- EMPTY LIST  TOGGLE  -->
-                <form method="post" action="#" class="for4" style=" float: left; position: relative; bottom:-340px;  ">
-
-                    <select style="height:30px;" onchange="window.location.href='?'+this.value">
-
-                        <option value="singlelistitems=empty&" {% if data['singlelistitems'] !="someitems" %} selected
-                            {% endif %}>Empty
-                            list / Start state</option>
-
-                        <option value="singlelistitems=someitems&" {% if data['singlelistitems']=="someitems" %}
-                            selected {% endif %}>
-                            Populated list</option>
-
-                    </select>
-
-                </form>
-                <!--  END USER TYPE TOGGLE -->
-
-
-                <!-- USER TYPE TOGGLE  -->
-                <form method="post" action="#" class="for4" style=" float: left; position: relative; bottom:-340px;  ">
-
-                    <select style="height:30px;" onchange="window.location.href='?'+this.value">
-
-                        <option value="user=citizen&" {% if data['user'] !="agent" %} selected {% endif %}>User type -
-                            Individual
-                        </option>
-
-                        <option value="user=agent&" {% if data['user']=="agent" %} selected {% endif %}>User type -
-                            Agent
-                        </option>
-
-                    </select>
-
-                </form>
-                <!--  END USER TYPE TOGGLE -->
-
-
-
-
-                <!-- RETURN YEAR TOGGLE  -->
-                <form method="post" action="#" class="for4" style=" float: left; position: relative; bottom:-340px;  ">
-
-                    <select style="height:30px;" onchange="window.location.href='?'+this.value">
-
-                        <option value="returnStatus=closed&" {% if data['returnStatus'] !="open" %} selected {% endif
-                            %}>Tax
-                            year -
-                            Previous</option>
-
-                        <option value="returnStatus=open&" {% if data['returnStatus']=="open" %} %} selected {% endif
-                            %}>Tax
-                            year -
-                            Current</option>
-
-                    </select>
-
-                </form>
-                <!--  RETURN YEAR  TOGGLE -->
-
-
-
                 <!-- {% endblock %} -->
         </body>
     </main>
-
-    <div class="govuk-button-group">
-        <button class="govuk-button" data-module="govuk-button">
-            Add an xyz
-        </button>
-        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-            Back to task list
-        </button>
-    </div>
-
 </div>
-
 
 </html>
