--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <ol class="govuk-summary-list">
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <a href="start-page-1-multi.html" title="start-page-multipart"><span
+                                    <a href="https://www.gov.uk/vehicle-tax" title="start-page-multipart"><span
                                             class="govuk-prototype-kit-task-list__section-number">
                                         </span>1. Start a service page - multipart</a>
                                 </h2>
