--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                                 <p>If the start point is linked to a wider process
                                     that needs more explanation, create an ‘Apply’ section within a multipart
                                     guide</p>
+                                <p> <a href="https://docs.publishing.service.gov.uk/document-types/transaction.html#example-pages" rel="nofollow">Most popular start pages on GOV.UK</a></p>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
