--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
                         <ol class="govuk-summary-list">
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <a href="https://www.gov.uk/vehicle-tax" title="start-page-multipart"><span
-                                            class="govuk-prototype-kit-task-list__section-number">
-                                        </span>1. Start a service page - multipart</a>
+                                    <a href="https://www.gov.uk/vehicle-tax" title="start-page-multipart">1. Start a service page - multipart</a>
                                 </h2>
                                 <p>If the start point is linked to a wider process
                                     that needs more explanation, create an ‘Apply’ section within a multipart
@@ -118,35 +116,35 @@
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-list-single-items-3.html" title="Calculation
                                         summary page"><span class="govuk-prototype-kit-task-list__section-number">
-                                        </span> Calculation
+                                        </span>Calculation
                                         summary</a>
                                 </h2>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-list-single-items-3.html" title="Single items"><span
-                                            class="govuk-prototype-kit-task-list__section-number">2. </span> Single
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Single
                                         items
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-list-subdata-items.html" title="Subdata-items"><span
-                                            class="govuk-prototype-kit-task-list__section-number">3. </span>
+                                            class="govuk-prototype-kit-task-list__section-number"></span>
                                         Subdata-items
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-list-subdata-items-view.html" title="Subdata-items-view"><span
-                                            class="govuk-prototype-kit-task-list__section-number">4. </span>
+                                            class="govuk-prototype-kit-task-list__section-number"></span>
                                         Subdata-items-view
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-remove-confirmation.html" title="Remove confirmation"><span
-                                            class="govuk-prototype-kit-task-list__section-number">5. </span> Remove
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Remove
                                         confirmation
                                 </h2></a>
                             </li>
@@ -159,21 +157,21 @@
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-validation-country.html" title="Validation-country"><span
-                                            class="govuk-prototype-kit-task-list__section-number">7. </span> Validation
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Validation
                                         country
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-validation-date.html" title="Validation-date"><span
-                                            class="govuk-prototype-kit-task-list__section-number">8. </span> Validation
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Validation
                                         date
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-validation-money-field.html" title="Validation-money-field"><span
-                                            class="govuk-prototype-kit-task-list__section-number">9. </span> Validation
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Validation
                                         money field</a>
                                 </h2>
                             </li>
@@ -181,35 +179,35 @@
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-validation-number-field.html"
                                         title="Validation-number-field"><span
-                                            class="govuk-prototype-kit-task-list__section-number">10. </span> Validation
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Validation
                                         number field
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-validation-radios.html" title="Validation-radios"><span
-                                            class="govuk-prototype-kit-task-list__section-number">11. </span> Validation
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Validation
                                         radios
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-validation-text-field.html" title="Validation-text-field"><span
-                                            class="govuk-prototype-kit-task-list__section-number">12. </span> Validation
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Validation
                                         text-field
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-validation-yes-no.html" title="Validation-yes-no"><span
-                                            class="govuk-prototype-kit-task-list__section-number">13. </span> validation
+                                            class="govuk-prototype-kit-task-list__section-number"></span> validation
                                         yes-no
                                 </h2></a>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
                                     <a href="templates-dashboards.html" title="Dashboards"><span
-                                            class="govuk-prototype-kit-task-list__section-number">14. </span> Dashboards
+                                            class="govuk-prototype-kit-task-list__section-number"></span> Dashboards
                                 </h2></a>
                             </li>
 
