--- a/index.html
+++ b/index.html
@@ -105,12 +105,18 @@
                         <ol class="govuk-summary-list">
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <a href="https://www.gov.uk/vehicle-tax" title="start-page-multipart">1. Start a service page - multipart</a>
+                                    <a href="https://www.gov.uk/vehicle-tax" title="start-page-multipart">Start a service page - multipart</a>
                                 </h2>
                                 <p>If the start point is linked to a wider process
                                     that needs more explanation, create an ‘Apply’ section within a multipart
                                     guide</p>
                                 <p> <a href="https://docs.publishing.service.gov.uk/document-types/transaction.html#example-pages" rel="nofollow">Most popular start pages on GOV.UK</a></p>
+                            </li>
+                               <li>
+                                <h2 class="govuk-prototype-kit-task-list__section">
+                                    <a href="https://webarchive.nationalarchives.gov.uk/ukgwa/20210315085358/https://www.gov.uk/performance/govuk-pay" title="Dashboards">Dashboards
+                                </h2></a>
+                                <p>Examples of other dashboards:  <a href="https://webarchive.nationalarchives.gov.uk/ukgwa/20210315085019/https://www.gov.uk/performance/other" title="Dashboards"></a></p>
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
@@ -150,8 +156,7 @@
                             </li>
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <a href="templates-validation-checkboxes.html" title="Checkboxes"><span
-                                            class="govuk-prototype-kit-task-list__section-number">6. </span> Checkboxes
+                                    <a href="templates-validation-checkboxes.html" title="Checkboxes">Checkboxes
                                 </h2></a>
                             </li>
                             <li>
@@ -204,12 +209,7 @@
                                         yes-no
                                 </h2></a>
                             </li>
-                            <li>
-                                <h2 class="govuk-prototype-kit-task-list__section">
-                                    <a href="templates-dashboards.html" title="Dashboards"><span
-                                            class="govuk-prototype-kit-task-list__section-number"></span> Dashboards
-                                </h2></a>
-                            </li>
+                         
 
                         </ol>
                     </div>
