--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                                     that needs more explanation, create an ‘Apply’ section within a multipart
                                     guide</p>
                                 <p> <a href="https://docs.publishing.service.gov.uk/document-types/transaction.html#example-pages" rel="nofollow">Most popular start pages on GOV.UK</a></p>
+                                <p>Mainstream content not linked to a wider process: <a href="https://design-system.service.gov.uk/patterns/start-using-a-service" title="mainstream-not-linked"></a></p>
                             </li>
                                <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
