Taking numbers out

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <ol class="govuk-summary-list">
                             <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <a href="https://www.gov.uk/vehicle-tax" title="start-page-multipart">1. Start a service page - multipart</a>
+                                    <a href="https://www.gov.uk/vehicle-tax" title="start-page-multipart">Start a service page - multipart</a>
                                 </h2>
                                 <p>If the start point is linked to a wider process
                                     that needs more explanation, create an ‘Apply’ section within a multipart
@@ -115,7 +115,7 @@
                             </li>
                                <li>
                                 <h2 class="govuk-prototype-kit-task-list__section">
-                                    <a href="https://webarchive.nationalarchives.gov.uk/ukgwa/20210315085358/https://www.gov.uk/performance/govuk-pay" title="Dashboards">2. Dashboards
+                                    <a href="https://webarchive.nationalarchives.gov.uk/ukgwa/20210315085358/https://www.gov.uk/performance/govuk-pay" title="Dashboards">Dashboards
                                 </h2></a>
                                 <p>Examples of other dashboards:  <a href="https://webarchive.nationalarchives.gov.uk/ukgwa/20210315085019/https://www.gov.uk/performance/other" title="Dashboards"></a></p>
                             </li>
