--- a/task-list-1.html
+++ b/task-list-1.html
@@ -99,6 +99,12 @@
                             Materials Recovery Facilities Return Form
                         </h1>
 
+                        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Please complete the return using the
+                            categories below.</h2>
+
+                        <p class="govuk-body govuk-!-margin-bottom-7">Get more info on <a herf="" title="">some link</a>
+                        </p>
+
                         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Application incomplete</h2>
                         <p class="govuk-body govuk-!-margin-bottom-7">You have completed 0 of X sections.</p>
 
