--- a/task-list-1.html
+++ b/task-list-1.html
@@ -117,7 +117,7 @@
                                 <ul class="govuk-prototype-kit-task-list__items">
                                     <li class="govuk-prototype-kit-task-list__item">
                                         <span class="govuk-prototype-kit-task-list__task-name">
-                                            Contact details
+                                            Submission date details
                                         </span>
                                         <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag"
                                             id="list-convictions-status">Not started</strong>
