--- a/templates-date.html
+++ b/templates-date.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Task list template – Prototype Kit – GOV.UK Prototype Kit
+        Material Facilities
     </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -81,57 +81,173 @@
 <div class="govuk-width-container ">
 
     <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-l">
-                    <div class="govuk-form-group">
-                        <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
-                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                                <h1 class="govuk-fieldset__heading">
-                                    When was your passport issued?
-                                </h1>
-                            </legend>
-                            <div id="passport-issued-hint" class="govuk-hint">
-                                For example, 27 3 2007
-                            </div>
-                            <div class="govuk-date-input" id="passport-issued">
-                                <div class="govuk-date-input__item">
-                                    <div class="govuk-form-group">
-                                        <label class="govuk-label govuk-date-input__label" for="passport-issued-day">
-                                            Day
-                                        </label>
-                                        <input class="govuk-input govuk-date-input__input govuk-input--width-2"
-                                            id="passport-issued-day" name="passport-issued-day" type="text"
-                                            inputmode="numeric">
-                                    </div>
-                                </div>
-                                <div class="govuk-date-input__item">
-                                    <div class="govuk-form-group">
-                                        <label class="govuk-label govuk-date-input__label" for="passport-issued-month">
-                                            Month
-                                        </label>
-                                        <input class="govuk-input govuk-date-input__input govuk-input--width-2"
-                                            id="passport-issued-month" name="passport-issued-month" type="text"
-                                            inputmode="numeric">
-                                    </div>
-                                </div>
-                                <div class="govuk-date-input__item">
-                                    <div class="govuk-form-group">
-                                        <label class="govuk-label govuk-date-input__label" for="passport-issued-year">
-                                            Year
-                                        </label>
-                                        <input class="govuk-input govuk-date-input__input govuk-input--width-4"
-                                            id="passport-issued-year" name="passport-issued-year" type="text"
-                                            inputmode="numeric">
-                                    </div>
-                                </div>
-                            </div>
-                        </fieldset>
+
+
+        <body class="govuk-template__body ">
+
+            <div class="govuk-width-container ">
+                <div class="govuk-grid-row">
+                    <div class="govuk-grid-column-two-thirds">
+
+
+                        <!--{% if data['user'] == "agent" %} -->
+                        <!-- {% else %} -->
+                        <!-- {% endif %} -->
+
+
+                        <h1 class="govuk-heading-xl">
+                            Materials Recovery Facilities Return Form
+                        </h1>
+
+                        <p class="govuk-body govuk-!-margin-bottom-7">Get more info on <a herf="" title="">some link</a>
+                        </p>
+
+                        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Application incomplete</h2>
+                        <p class="govuk-body govuk-!-margin-bottom-7">You have completed 0 of X sections.</p>
+                        <div class="govuk-width-container ">
+
+                            <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content"
+                                role="main">
+                                <div class="govuk-grid-row">
+                                    <div class="govuk-grid-column-two-thirds">
+                                        <h1 class="govuk-heading-l">
+                                            <div class="govuk-form-group">
+                                                <fieldset class="govuk-fieldset" role="group"
+                                                    aria-describedby="passport-issued-hint">
+                                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                                                        <h1 class="govuk-fieldset__heading">
+                                                            When was your passport issued?
+                                                        </h1>
+                                                    </legend>
+                                                    <div id="passport-issued-hint" class="govuk-hint">
+                                                        For example, 27 3 2007
+                                                    </div>
+                                                    <div class="govuk-date-input" id="passport-issued">
+                                                        <div class="govuk-date-input__item">
+                                                            <div class="govuk-form-group">
+                                                                <label class="govuk-label govuk-date-input__label"
+                                                                    for="passport-issued-day">
+                                                                    Day
+                                                                </label>
+                                                                <input
+                                                                    class="govuk-input govuk-date-input__input govuk-input--width-2"
+                                                                    id="passport-issued-day" name="passport-issued-day"
+                                                                    type="text" inputmode="numeric">
+                                                            </div>
+                                                        </div>
+                                                        <div class="govuk-date-input__item">
+                                                            <div class="govuk-form-group">
+                                                                <label class="govuk-label govuk-date-input__label"
+                                                                    for="passport-issued-month">
+                                                                    Month
+                                                                </label>
+                                                                <input
+                                                                    class="govuk-input govuk-date-input__input govuk-input--width-2"
+                                                                    id="passport-issued-month"
+                                                                    name="passport-issued-month" type="text"
+                                                                    inputmode="numeric">
+                                                            </div>
+                                                        </div>
+                                                        <div class="govuk-date-input__item">
+                                                            <div class="govuk-form-group">
+                                                                <label class="govuk-label govuk-date-input__label"
+                                                                    for="passport-issued-year">
+                                                                    Year
+                                                                </label>
+                                                                <input
+                                                                    class="govuk-input govuk-date-input__input govuk-input--width-4"
+                                                                    id="passport-issued-year"
+                                                                    name="passport-issued-year" type="text"
+                                                                    inputmode="numeric">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </fieldset>
+                                            </div>
+                                        </h1>
+                            </main>
+
+                        </div>
+
+
                     </div>
-                </h1>
+                </div>
 
 
+                <!-- EMPTY LIST  TOGGLE  -->
+                <form method="post" action="#" class="for4" style=" float: left; position: relative; bottom:-340px;  ">
+
+                    <select style="height:30px;" onchange="window.location.href='?'+this.value">
+
+                        <option value="singlelistitems=empty&" {% if data['singlelistitems'] !="someitems" %} selected
+                            {% endif %}>Empty
+                            list / Start state</option>
+
+                        <option value="singlelistitems=someitems&" {% if data['singlelistitems']=="someitems" %}
+                            selected {% endif %}>
+                            Populated list</option>
+
+                    </select>
+
+                </form>
+                <!--  END USER TYPE TOGGLE -->
+
+
+                <!-- USER TYPE TOGGLE  -->
+                <form method="post" action="#" class="for4" style=" float: left; position: relative; bottom:-340px;  ">
+
+                    <select style="height:30px;" onchange="window.location.href='?'+this.value">
+
+                        <option value="user=citizen&" {% if data['user'] !="agent" %} selected {% endif %}>User type -
+                            Individual
+                        </option>
+
+                        <option value="user=agent&" {% if data['user']=="agent" %} selected {% endif %}>User type -
+                            Agent
+                        </option>
+
+                    </select>
+
+                </form>
+                <!--  END USER TYPE TOGGLE -->
+
+
+
+
+                <!-- RETURN YEAR TOGGLE  -->
+                <form method="post" action="#" class="for4" style=" float: left; position: relative; bottom:-340px;  ">
+
+                    <select style="height:30px;" onchange="window.location.href='?'+this.value">
+
+                        <option value="returnStatus=closed&" {% if data['returnStatus'] !="open" %} selected {% endif
+                            %}>Tax
+                            year -
+                            Previous</option>
+
+                        <option value="returnStatus=open&" {% if data['returnStatus']=="open" %} %} selected {% endif
+                            %}>Tax
+                            year -
+                            Current</option>
+
+                    </select>
+
+                </form>
+                <!--  RETURN YEAR  TOGGLE -->
+
+
+
+                <!-- {% endblock %} -->
+        </body>
     </main>
+
+    <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">
+            Continue
+        </button>
+        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+            Back to previous page
+        </button>
+    </div>
 
 </div>
 
