--- a/templates-date.html
+++ b/templates-date.html
@@ -230,7 +230,7 @@
     </main>
 
     <div class="govuk-button-group">
-        <a href="#" title="#"></a>
+        <a href="permit-number.html" title="permit number page"></a>
         <button class="govuk-button" data-module="govuk-button">
             Continue
         </button>
