--- a/templates-date.html
+++ b/templates-date.html
@@ -230,10 +230,10 @@
     </main>
 
     <div class="govuk-button-group">
-        <a href="permit-number.html" title="permit number page"></a>
-        <button class="govuk-button" data-module="govuk-button">
-            Continue
-        </button>
+        <a href="permit-number.html" title="permit number page">
+            <button class="govuk-button" data-module="govuk-button">
+                Continue
+            </button>
         </a>
         <a href="task-list-1.html" title="Back to task list">
             <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
